--- a/src/work/components/WorkBasicInfo.scss
+++ b/src/work/components/WorkBasicInfo.scss
@@ -1,8 +1,8 @@
 .workitem-tab {
     height: 100%;
     .workitem-detail-row {
-        height: calc(100% - 60px);
-        overflow: auto;
+        // height: calc(100% - 60px);
+        // overflow: auto;
         background: #fff;
         margin: 20px 0;
         padding: 0 15px;
