--- a/src/work/components/WorkAside.scss
+++ b/src/work/components/WorkAside.scss
@@ -89,7 +89,11 @@
                     width: 100%;
 
                     .work-aside-item-status {
+                        border-radius: 3px;
+                        background: #eaedf1cf;
                         font-size: 12px;
+                        padding: 2px 5px;
+                        color: #fff;
                     }
                 }
             }
