--- a/src/work/components/WorkChangeView.scss
+++ b/src/work/components/WorkChangeView.scss
@@ -10,6 +10,12 @@
         height: 20px;
         width: 20px;
     }
+    .workitem-svg-icon:hover{
+        background: rgba(9, 30, 66, 0.08);
+        text-decoration: inherit;
+        transition-duration: 0s, 0.15s;
+        border-radius: 3px;
+    }
     .change-view-dropdown {
         position: absolute;
         background-color: #fff;
