--- a/src/work/components/WorkDetail.scss
+++ b/src/work/components/WorkDetail.scss
@@ -35,19 +35,19 @@
         padding: 0;
     }
 
-    .ant-modal-content {
-        height: 90vh;
-        overflow: hidden;
-    }
+    // .ant-modal-content {
+    //     height: 90vh;
+    //     overflow: hidden;
+    // }
 
     .work-detail::-webkit-scrollbar {
         width: 0 !important;
         height: 0 !important;
     }
 
-    .ant-modal-body {
-        height: calc(100% - 110px);
-    }
+    // .ant-modal-body {
+    //     height: calc(100% - 110px);
+    // }
 
     .work-detail {
         height: 100%;
