--- a/src/work/components/WorkTableFilter.scss
+++ b/src/work/components/WorkTableFilter.scss
@@ -58,6 +58,10 @@
         }
         .filter-modal {
             right: 0;
+            top: 30px;
+        }
+        .worklist-filter-modal {
+            position: relative;
         }
     }
     .work-view {
