--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -84,6 +84,11 @@ $form-input-color: #e3e8f07d;
     height: 18px;
 }
 
+.big-icon {
+    width: 20px;
+    height: 20px;
+}
+
 .menu-icon {
     width: 18px;
     height: 18px;
