--- a/src/work/components/WorkFilterModal.scss
+++ b/src/work/components/WorkFilterModal.scss
@@ -1,6 +1,6 @@
 .worklist-filter-modal {
     cursor: pointer;
-    position: relative;
+    // position: relative;
     .filtet-modal-hidden {
         display: none;
     }
@@ -18,7 +18,6 @@
         width: 400px;
         background-color: #fff;
         position: absolute;
-        top: 32px;
         z-index: 3;
         border-radius: 4px;
         box-shadow: 0 3px 6px -4px rgb(0 0 0 / 12%), 0 6px 16px 0 rgb(0 0 0 / 8%), 0 9px 28px 8px rgb(0 0 0 / 5%)
