--- a/src/work/components/WorkTable.scss
+++ b/src/work/components/WorkTable.scss
@@ -59,6 +59,7 @@
             text-overflow: ellipsis;
             white-space: nowrap;
             overflow: hidden;
+            width: 300px;
         }
         .work-text:hover {
             text-decoration: underline;
