--- a/src/work/components/WorkListFilter.scss
+++ b/src/work/components/WorkListFilter.scss
@@ -26,19 +26,7 @@
         }
     }
 
-    .worklist-filter-item {
-        display: flex;
-        align-items: center;
-        border-radius: 4px;
-        position: relative;
-        height: 30px;
-        cursor: pointer;
-        padding: 0 3px;
-    }
-
-    .worklist-filter-item:hover {
-        background-color: var(--tiklab-gray-400);
-    }
+    
     .worklist-search-botton {
         border-radius: 4px;
         display: flex;
@@ -61,7 +49,7 @@
     flex: 1;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    // padding: 10px;
     gap: 10px;
     .search-icon {
         height: 15px;
