修改抽屉的宽度

--- a/src/project/project/components/Project.scss
+++ b/src/project/project/components/Project.scss
@@ -10,6 +10,7 @@
         overflow: auto;
         gap: 20px;
         padding-bottom: 20px;
+        height: 156px;
         .project-item:hover {
             border-radius: 4px 4px 0 0;
             border-bottom: 2px solid var(--tiklab-blue);
