--- a/src/work/components/WorkTableFilter.scss
+++ b/src/work/components/WorkTableFilter.scss
@@ -21,6 +21,7 @@
         .select-content {
             padding: 5px 10px;
             background-color: var(--tiklab-gray);
+            width: 95px;
         }
 
         .select-content:hover {
