--- a/src/home/common/components/HomePage.scss
+++ b/src/home/common/components/HomePage.scss
@@ -61,6 +61,7 @@
         background-color: #fff;
         border-radius: 4px;
         padding: 0 10px 10px;
+        height: 175px;
 
         .home-project {
             display: flex;
