修改日志的样式

--- a/src/common/select/SelectItem.scss
+++ b/src/common/select/SelectItem.scss
@@ -1,9 +1,9 @@
 .select-item {
     display: flex;
     align-items: center;
-    height: 40px;
-    line-height: 40px;
-    padding: 20px;
+    height: 35px;
+    line-height: 35px;
+    padding: 0px 20px;
    
 
 }
