--- a/src/project/common/components/ProjectChangeModal.scss
+++ b/src/project/common/components/ProjectChangeModal.scss
@@ -96,5 +96,10 @@
         }
  
     }
-    
+    .modal-show {
+        display: block;
+    }
+    .modal-hidden {
+        display: none;
+    }
 }
