--- a/src/common/styles/_index.scss
+++ b/src/common/styles/_index.scss
@@ -118,6 +118,9 @@
         padding: 0 24px;
     }
 }
+.ant-form-item {
+    margin: 0 0 15px;
+}
 .ant-form-item-explain {
     font-size: 13px;
 }
