--- a/src/work/components/WorkChildAdd.scss
+++ b/src/work/components/WorkChildAdd.scss
@@ -1,20 +1,10 @@
-
 .child-add {
     position: absolute;
     height: 100%;
     width: 100%;
     z-index: 3;
     background: #fff;
-    .child-add-input {
-        height: 35px;
-        border-radius: 4px;
-        border: 1px solid var(--tiklab-blue);
-        display: flex;
-        justify-content: space-between;
-        padding: 0 10px;
-        align-items: center;
-        color: #999;
-    }
+
     .child-add-model {
         position: absolute;
         z-index: 3;
@@ -28,37 +18,49 @@
     .child-add-search {
         display: flex;
         gap: 20px;
-        padding: 10px;
-        border-bottom: 2px solid #f0f0f0;
         border-top-right-radius: 4px;
         border-top-left-radius: 4px;
+        align-items: center;
+        position: relative;
+        z-index: 5;
+
         .select-view {
             height: 32px;
             line-height: 32px;
-            width: 200px;
+            min-width: 200px;
+            max-width: 250px;
             background: #f5f5f5;
             padding: 0 10px;
+            flex: 1;
         }
-        .search-input {
-            border: 0;
-            background-color: #f5f5f5;
-            border-radius: 2px;
+        .select-group-title {
+            font-weight: 600;
+            color: var(--tiklab-gray-500);
+            font-size: 12px;
+            padding: 0 10px;
+        }
+        .child-add-submit {
+            cursor: pointer;
+            color: var(--tiklab-blue);
         }
     }
+
     .child-add-table {
         padding: 0 10px;
         margin: 10px 0;
         border-bottom-right-radius: 4px;
         border-bottom-left-radius: 4px;
-        max-height: calc(100% - 54px);;
+        max-height: 100%;
         overflow: auto;
         background: #fff;
+
         .child-add-table-title {
             height: 30px;
             line-height: 30px;
             font-weight: 600;
             color: #999;
         }
+
         .child-add-table-page {
             height: 20px;
             line-height: 20px;
@@ -68,6 +70,7 @@
             cursor: pointer;
         }
     }
+
     .child-add-work-item:hover {
         background-color: var(--tiklab-gray-400);
     }
@@ -77,21 +80,26 @@
         align-items: center;
         justify-content: space-between;
         padding: 10px 10px;
+
         .work-item-icon {
             display: inline-flex;
             gap: 10px;
             align-items: center;
         }
+
         .work-item-title {
             margin-top: 10px;
         }
+
         .work-item-id {
             color: #999;
             font-size: 12px;
         }
+
         .work-item-right {
             display: flex;
             align-items: center;
+
             .work-item-icon {
                 background: #DEEBFF;
                 color: #0947A6;
