--- a/src/work/components/WorkRelationAdd.scss
+++ b/src/work/components/WorkRelationAdd.scss
@@ -1,19 +1,10 @@
 
 .relation-add {
-    position: relative;
-    .relation-add-input {
-        height: 35px;
-        border-radius: 4px;
-        border: 1px solid var(--tiklab-blue);
-        display: flex;
-        justify-content: space-between;
-        padding: 0 10px;
-        align-items: center;
-        color: #999;
-        .relation-add-submit {
-            cursor: pointer;
-        }
-    }
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    background: #fff;
     .relation-add-model {
         position: absolute;
         z-index: 3;
@@ -32,21 +23,37 @@
     .relation-add-search {
         display: flex;
         gap: 20px;
-        padding: 10px;
-        border-bottom: 2px solid #f0f0f0;
+        // padding: 10px;
+        // border-bottom: 2px solid #f0f0f0;
         border-top-right-radius: 4px;
         border-top-left-radius: 4px;
+        align-items: center;
+        justify-content: space-between;
         .select-view {
             height: 32px;
             line-height: 32px;
-            width: 200px;
+            min-width: 200px;
+            max-width: 250px;
             background: #f5f5f5;
             padding: 0 10px;
+            position: relative;
+            z-index: 6;
+            flex: 1;
         }
         .search-input {
             border: 0;
             background-color: #f5f5f5;
             border-radius: 2px;
+        }
+        .select-group-title {
+            font-weight: 600;
+            color: var(--tiklab-gray-500);
+            font-size: 12px;
+            padding: 0 10px;
+        }
+        .relation-add-submit {
+            cursor: pointer;
+            color: var(--tiklab-blue);
         }
     }
     .relation-add-table {
@@ -54,7 +61,7 @@
         margin: 10px 0;
         border-bottom-right-radius: 4px;
         border-bottom-left-radius: 4px;
-        max-height: calc(100vh - 400px);
+        max-height: calc(100vh - 420px);
         overflow: auto;
         background: #fff;
         
@@ -82,7 +89,7 @@
             align-items: center;
         }
         .work-item-title {
-            margin-top: 10px;
+            margin-top: 2px;
         }
         .work-item-id {
             color: #999;
