--- a/src/work/components/WorkDocumentList.scss
+++ b/src/work/components/WorkDocumentList.scss
@@ -14,7 +14,12 @@
     .ant-table table {
         border-bottom: 0;
     }
-
+    .document-content {
+        background: #fff;
+        border-radius: 4px;
+        position: relative;
+        height: calc(100% - 100px);
+    }
     .repository-table {
         background: #fff;
         padding: 15px;
